<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.icy.squire</groupId>
    <artifactId>sQuire</artifactId>
    <version>0.0.1</version>

    <build>
        <plugins>
            <plugin>
                <groupId>com.zenjava</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>8.4.0</version>
                <configuration>
                    <mainClass>your.package.with.Launcher</mainClass>
                </configuration>
            </plugin>

            <!-- plugins to enhance models for ebean -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.avaje.ebeanorm</groupId>
                <artifactId>querybean-maven-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <id>main</id>
                        <phase>process-classes</phase>
                        <configuration>
                            <transformArgs>debug=1</transformArgs>
                        </configuration>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.avaje.ebeanorm</groupId>
                <artifactId>avaje-ebeanorm-mavenenhancer</artifactId>
                <version>4.9.2</version>
                <executions>
                    <execution>
                        <id>main</id>
                        <phase>process-classes</phase>
                        <configuration>
                            <classSource>target/classes</classSource>
                            <!--<packages>org.example.domain.**</packages>-->
                            <transformArgs>debug=1</transformArgs>
                        </configuration>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


        </plugins>
    </build>

    <dependencies>
        <!--ORM dependencies-->
        <dependency>
            <groupId>org.avaje.ebeanorm</groupId>
            <artifactId>avaje-ebeanorm</artifactId>
            <version>7.5.1</version>
        </dependency>

        <!-- Generate query beans (java annotation processor) -->
        <dependency>
            <groupId>org.avaje.ebeanorm</groupId>
            <artifactId>querybean-generator</artifactId>
            <version>2.1.2</version>
            <scope>provided</scope> <!-- provided scope to keep out of artifact -->
        </dependency>

        <!-- The generated query beans require avaje-ebeanorm-querybean -->
        <dependency>
            <groupId>org.avaje.ebeanorm</groupId>
            <artifactId>avaje-ebeanorm-querybean</artifactId>
            <version>2.1.1</version>
        </dependency>

        <!-- Used to generate the query beans manually -->
        <dependency>
            <groupId>org.avaje.ebeanorm</groupId>
            <artifactId>avaje-ebeanorm-typequery-generator</artifactId>
            <version>1.4.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Optional ebeans dependencies for validating data/logging -->
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.1.0.Final</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <!-- JDBC connector for sqlite -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.8.11.2</version>
        </dependency>

        <!-- JavaFX controlsfx -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.10</version>
        </dependency>

        <!-- JUnit (required for MobWrite) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
        </dependency>
        <!-- RichtextFX -->
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.6.10</version>
        </dependency>
    </dependencies>
</project>